--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,6 +2,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
@@ -31,15 +33,15 @@ body {
 } 
 
 
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
-
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+div.text .child {
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  font-size: 14px;
 }
 
